[tool.poetry]
name = "diff_tester_export_insns"
version = "0.1.0"
description = ""
authors = ["2over12 <ian.smith@trailofbits.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pycryptodome = "^3.19.1"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
