[tool.poetry]
name = "replace_pc_relative_disactions"
version = "0.1.0"
description = ""
authors = ["2over12 <ian.smith@trailofbits.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sortedcontainers = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
